[package]
name = "ta-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
serde = { version = "1.0.188", features = ["derive"] }
clap = { version = "4.4.1", features = ["derive"] }
rand = "0.8.5"
